--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -34,11 +34,19 @@ The lightning conference was a success.
 It was my first Bitcoin only conference and I feel like Alice waking up
 after her rabbit hole dream.
 
+During three days, I was completely in a different world, more
+technical, more futuristic with really original, passionated and
+passionating people. I cannot go into the details, but I wanted to give
+my overall experience.
+
 # Day 0 - The Meetup dev
 
 Location: [AHOY](https://www.ahoyberlin.com/)
 
 My plan landed the morning, at 9:00, and I went directly to the meetup.
+The space was quite big but quickly crowded by nerds like me.
+Dark clothes for the most, a Club Mate in one hand, the other with a
+computer and asking the wifi code and a power plug.
 
 As described in the invitation email, it was an open meetup without
 any prior agenda, focused on technical questions around the
@@ -53,7 +61,7 @@ become familiar with the library interfaces and write a minimal
 implementation of a lightning client.
 The lack of space in the main room droved us to work in front of
 the bar. It was difficult to discuss in this area because of the
-noise of the crowd, but it was very instructive.
+noise, but it was very instructive.
 
 My check-in to the hotel was at 6:00pm. I left the space, took the
 subway and get out to the nearest station. I could take the bus then, but I
@@ -76,7 +84,7 @@ French people group, we decided to try the famous Room77 pub.
 
 Location: [Room77](http://www.room77.de/) - Graefestraße 77, Berlin
 
-```
+```pink
  ──▄▄█▀▀▀▀▀█▄▄─  Room77 is one of the first place in the world wich
 ▄█▀──▄─▄────▀█▄  accepted cryptocurrency payments.
 █───▀█▀▀▀▀▄───█
@@ -130,6 +138,11 @@ believe me or not even for a non english speaker like me all is
 intelligible , and the quantity of relevant information, deep in detail
 explanation of technical solution of complex problem is outstanding.
 
+This first day, the main stage was very focused on technical part. It
+was really refreshing to listen to passionated people with a clear
+vision and even if all the audience and speakers have certainly a big
+bias when it is about the Lightning Network, the general spirit was:
+Congrats, the thing works, now we have a lot improvement to do.
 
 Sadly, I could not enter in the sponsored party, not enough place was
 reserved for the conference attended. The french group and I ended
@@ -139,6 +152,9 @@ again in Room77.
 
 Talks, I attended:
 
+My favourite talk so far, was from Jonas Nick, cryptographer at
+Blockstream, who explained in a very clear way how Schnorr signature and
+Taproot will be used for the later improvements.
 
 Someone in the french group had a contact with a member of the c-base
 hackerspace and we were invited to visit it.
@@ -160,20 +176,26 @@ hackerspace and we were invited to visit it.
 [c-base](https://c-base.org) is the oldest crashed space station on earth.
 
 
+# Unstack sats
+
 I have unstacked a lot of sats playing with the funny
 hardware of the second floor, buying stickers, hot chocolate, coffee and
 beer. The speed of transaction was very fast and with very few fee,
 Although my Eclair Wallet has only two channels.
 
+Spending everyday with my wallet contributed to the overall futuristic
+atmosphere and it was a great reminder everyday that the technology
+, people were actually talking is real, it exists and it grows.
+
 ```
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣤⣶⣶⣶⣶⣶⠶⠶⣶⣶⡶⠶⠶⠶⠶⠶⠶⢦⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄|---------------|-----|
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡿⠂⠈⠉⠄⠄⠄⠄⠈⠉⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| amount        | fee |
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣤⣶⣶⣶⣶⣶⠶⣶⠶⣶⡶⠶⠶⠶⠶⠶⠶⢦⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄|---------------|-----|
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡿⠈⠂⠉⠄⠄⠄⠄⠈⠄⠉⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| amount        | fee |
 ⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄|---------------|-----|
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 38 394,47     | 61  |
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 30 8469       | 0   |
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⠄⠄⠄⠶⠶⠄⠄⠄⠄⠂⠶⠶⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 38 394,47     | 61  |
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⠄⠄⠄⠶⠶⠄⠄⠂⠄⠂⠶⠶⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 30 8469       | 0   |
 ⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 101           | 1   |
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 226001        | 0   |
-⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 139 580,972   | 222 |
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⠄⠄⠄⠶⠄⠶⠄⠄⠄⠂⠉⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 226001        | 0   |
+⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠈⡇⠄⠄⠄⠄⠶⠄⠶⠄⠄⠂⠂⠄⠂⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| 139 580,972   | 222 |
 ⠄⠄⠄⠄⠄⠄⠄⠄⠄⢀⠑⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣿⠄⠄⠄⠄⠄⠄⠄⠄⠄| 402,643       | 0   |
 ⠄⠄⠄⠄⠄⠄⠄⢀⣔⣥⣄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣷⣦⣤⣐⡀⠄⠄⠄⠄⠄| 34 891,799    | 175 |
 ⠄⠄⠄⠄⠄⠄⣤⣴⣿⣿⡿⣇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣿⣿⡿⠟⠄⠄⠄⠄⠄⠄| 87 359,735    | 9   |
