--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -150,8 +150,19 @@ again in Room77.
 
 # Day 2 --
 
-Talks, I attended:
+I spend more time on the second floor, playing with the hardware that
+people brought to the conference. There was a lot of funny machines,
+like a cocktail dispenser, beer taps, a polaroid camera, a blowing
+bubble robot, all connected to the lightning network, accepting sats as
+a price for the entertainment. Several companies exposed their products
+like home hosting Bitcoin node hardware or cold storage solutions.
+Around a big table with a screen at the end it, people were organizing
+workshop about open source software.
 
+In a medium sized space, the second stage was taking place without a big
+scene only a projector and a microphone like a standard tech meetup.
+The talks were great, I did not keep the list of the talk I attended but
+it was really pleasant to have this dimension of presentation.
 My favourite talk so far, was from Jonas Nick, cryptographer at
 Blockstream, who explained in a very clear way how Schnorr signature and
 Taproot will be used for the later improvements.
