--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -72,8 +72,7 @@ hundred meters how long this wall was and the size of its paintings.
 On a little sign, near the ground, was written: **Berliner Mauer**. \\
 One month before its 30th anniversary, this wall did not catch my eyes. \\
 The contemporary concrete and its cold appearance feels actual. \\
-A rigid line separating families and friends feels actual. \\
-The cold war against individual liberties feels actual.
+A rigid line separating families and friends feels actual.
 
 The rain did not spoil the after-party, which was organised in
 a nice pub [Hirsch & Hase](https://hirschundhase.de/), near the station
@@ -186,6 +185,10 @@ hackerspace and we were invited to visit it.
 
 [c-base](https://c-base.org) is the oldest crashed space station on earth.
 
+After entering through a corridor worthy of being the decors of a remake
+of 2001: a Space Odyssey, we were welcomed inside a big space which
+walls coated with electronic cards, colored neons and LED pannels.
+We drank a beer near a pub counter with
 
 # Unstack sats
 
