--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -157,7 +157,7 @@ bubble robot, all connected to the lightning network, accepting sats as
 a price for the entertainment. Several companies exposed their products
 like home hosting Bitcoin node hardware or cold storage solutions.
 Around a big table with a screen at the end it, people were organizing
-workshop about open source software.
+workshops about open source software.
 
 In a medium sized space, the second stage was taking place without a big
 scene only a projector and a microphone like a standard tech meetup.
@@ -166,6 +166,10 @@ it was really pleasant to have this dimension of presentation.
 My favourite talk so far, was from Jonas Nick, cryptographer at
 Blockstream, who explained in a very clear way how Schnorr signature and
 Taproot will be used for the later improvements.
+
+I managed to have a picture with Olaoluwa Osuntokun who was patient
+enough to accept it even if he did not know me. The fan boy in me was
+very happy.
 
 Someone in the french group had a contact with a member of the c-base
 hackerspace and we were invited to visit it.
@@ -189,14 +193,26 @@ hackerspace and we were invited to visit it.
 After entering through a corridor worthy of being the decors of a remake
 of 2001: a Space Odyssey, we were welcomed inside a big space which
 walls coated with electronic cards, colored neons and LED pannels.
-We drank a beer near a pub counter with
+We drank a beer near a pub counter with a futuristic vibe.
+
+Our host guided us in the downstair floor, following the story telling
+of the space he signalled our intrusion to the other spaceships members
+working inside with pressing a weird button. An Alarm rang and panels
+with Space Aliens form drawn on it switch on. The first floor was
+impressive, but this ground was at another level. Even the ceiling had
+wired, dells and buttons. We visited a Library,
+a room with a big mess of tools, soldering irons, space with computer
+screens and lava lamps.
+
+I gifted my best Bitcoin sticker to our guide who in return give us
+stickers with the Raumstation logo.
 
 # Unstack sats
 
 I have unstacked a lot of sats playing with the funny
 hardware of the second floor, buying stickers, hot chocolate, coffee and
 beer. The speed of transaction was very fast and with very few fee,
-Although my Eclair Wallet has only two channels.
+Although my Eclair Wallet had only two channels.
 
 Spending everyday with my wallet contributed to the overall futuristic
 atmosphere and it was a great reminder everyday that the technology
