--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -32,8 +32,8 @@ Visited nice places and met original people.
 I started writing this post in the Berlin Tegel airport.
 Totally exhausted but with a lot of thought in mind.
 The lightning conference was a success.
-It was my first Bitcoin only conference and I feel like Alice waking up
-after her rabbit hole dream.
+It was the first Bitcoin only conference I attended and 
+I feel like Alice waking up after her rabbit hole dream.
 
 During three days, I was completely in a different world, more
 technical, more futuristic with really original, passionated and
@@ -41,10 +41,10 @@ passionating people. I cannot go into the details, but I wanted to give
 my overall experience.
 
 # Day 0 - The Meetup dev
-
+ 
 Location: [AHOY](https://www.ahoyberlin.com/)
 
-My plan landed the morning, at 9:00, and I went directly to the meetup.
+My plane landed the morning, at 9:00, and I went directly to the meetup.
 The space was quite big but quickly crowded by nerds like me.
 Dark clothes for the most, a Club Mate in one hand, the other with a
 computer and asking the wifi code and a power plug.
@@ -56,24 +56,24 @@ as well as a small area for impromptu talks, announcements or demos.
 It was completely self-organized.
 
 I attended the rust-lightning workshop organised by ariard.
-The exercise consisted to clone a bootstrapping
+The exercise consisted of cloning a bootstrapping
 [repository](https://github.com/ariard/hacking-rust-lightning)
-become familiar with the library interfaces and write a minimal
+familiarizing with the library interfaces and writing a minimal
 implementation of a lightning client.
 The lack of space in the main room droved us to work in front of
 the bar. It was difficult to discuss in this area because of the
-noise, but it was very instructive.
+noise, but it remained very instructive.
 
 My check-in to the hotel was at 6:00pm. I left the space, took the
-subway and get out to the nearest station. I could take the bus then, but I
-wanted to look at the street of Berlin. Walking along a wall, thinking
+subway and got out at the nearest station. I could have taken the bus, but I
+wanted to explore Berlin's streets. Walking along a wall, thinking
 of the Lightning, the exciting future to come, I noticed after several
-hundred meters how long this wall was and the size of its paintings.
+hundred meters how long this wall actually was and the size of its paintings.
 
 On a little sign, near the ground, was written: **Berliner Mauer**. \\
 One month before its 30th anniversary, this wall did not catch my eyes. \\
-The contemporary concrete and its cold appearance feels actual. \\
-A rigid line separating families and friends feels actual.
+The contemporary concrete and its cold appearance felt actual. \\
+A rigid line separating families and friends felt actual.
 
 The rain did not spoil the after-party, which was organised in
 a nice pub [Hirsch & Hase](https://hirschundhase.de/), near the station
@@ -90,15 +90,15 @@ Location: [Room77](http://www.room77.de/) - Graefestraße 77, Berlin
 █───▀█▀▀▀▀▄───█
 █────█▄▄▄▄▀───█  A big Bitcoin sign in neon welcome you as you enter in
 █────█────█───█  a warm room with a cypherpunk ambiance. Price is good
-▀█▄─▀▀█▀█▀──▄█▀  and service is impeccable.
+▀█▄─▀▀█▀█▀──▄█▀  and service great.
 ──▀▀█▄▄▄▄▄█▀▀──
 ```
 
 We had a lot of fun in this pub, which is quite cosy and pleasant. It
-was certainly the first and the last time we enjoyed it not overcrowded
+was certainly the first and the only time we enjoyed it not overcrowded
 by the thirsty lightning community. Paying with lightning was really
-easy, a small machine displaying the qr-code was passing by the staff
-who was totally used to handle this kind of transaction.
+easy, a small machine displaying the qr-code was passed around by the staff
+who seemed totally used to handle this kind of transaction.
 
 Coincidence or not it was the same night that the peer-to-peer
 distributed timestamp server of the Bitcoin protocole would generate its
@@ -112,7 +112,7 @@ the subdued light of the pub.
 We spent all our time in the bar until the 600 000th block happened,
 local time was around 2am. We celebrated it with a round of applause and
 a last drink, but tired by this long day I was happy to go to bed.
-
+ 
 # Day 1 --
 
 Talks, I attended:
@@ -150,7 +150,7 @@ again in Room77.
 
 # Day 2 --
 
-I spend more time on the second floor, playing with the hardware that
+I spent more time on the second floor, playing with the hardware that
 people brought to the conference. There was a lot of funny machines,
 like a cocktail dispenser, beer taps, a polaroid camera, a blowing
 bubble robot, all connected to the lightning network, accepting sats as
@@ -169,11 +169,11 @@ Taproot will be used for the later improvements.
 
 I managed to have a picture with Olaoluwa Osuntokun who was patient
 enough to accept it even if he did not know me. The fan boy in me was
-very happy.
+ecstactic.
 
 Someone in the french group had a contact with a member of the c-base
 hackerspace and we were invited to visit it.
-
+ 
 # c-base, a Raumstation unter Berlin
 
 ```
@@ -191,27 +191,27 @@ hackerspace and we were invited to visit it.
 [c-base](https://c-base.org) is the oldest crashed space station on earth.
 
 After entering through a corridor worthy of being the decors of a remake
-of 2001: a Space Odyssey, we were welcomed inside a big space which
+of 2001: a Space Odyssey, we were welcomed inside a big space with
 walls coated with electronic cards, colored neons and LED pannels.
 We drank a beer near a pub counter with a futuristic vibe.
 
 Our host guided us in the downstair floor, following the story telling
 of the space he signalled our intrusion to the other spaceships members
-working inside with pressing a weird button. An Alarm rang and panels
+working inside by pressing a weird button. An Alarm rang and panels
 with Space Aliens form drawn on it switch on. The first floor was
 impressive, but this ground was at another level. Even the ceiling had
 wired, dells and buttons. We visited a Library,
 a room with a big mess of tools, soldering irons, space with computer
 screens and lava lamps.
 
-I gifted my best Bitcoin sticker to our guide who in return give us
+I gifted my best Bitcoin sticker to our guide who in return gave us
 stickers with the Raumstation logo.
-
+ 
 # Unstack sats
 
 I have unstacked a lot of sats playing with the funny
 hardware of the second floor, buying stickers, hot chocolate, coffee and
-beer. The speed of transaction was very fast and with very few fee,
+beer. The speed of transaction was swift and fees were cheap,
 Although my Eclair Wallet had only two channels.
 
 Spending everyday with my wallet contributed to the overall futuristic
