--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -32,7 +32,7 @@ Visited nice places and met original people.
 I started writing this post in the Berlin Tegel airport.
 Totally exhausted but with a lot of thought in mind.
 The lightning conference was a success.
-It was the first Bitcoin only conference I attended and 
+It was the first Bitcoin only conference I attended and
 I feel like Alice waking up after her rabbit hole dream.
 
 During three days, I was completely in a different world, more
@@ -41,7 +41,7 @@ passionating people. I cannot go into the details, but I wanted to give
 my overall experience.
 
 # Day 0 - The Meetup dev
- 
+
 Location: [AHOY](https://www.ahoyberlin.com/)
 
 My plane landed the morning, at 9:00, and I went directly to the meetup.
@@ -112,8 +112,22 @@ the subdued light of the pub.
 We spent all our time in the bar until the 600 000th block happened,
 local time was around 2am. We celebrated it with a round of applause and
 a last drink, but tired by this long day I was happy to go to bed.
- 
+
 # Day 1 --
+
+Location: KÖPENICKER STR. 16 - 17 10997 Berlin
+
+```
+         ##           Cafe was served by the people of the Paralelni Polis truck
+        ####          and sponsored by Bitmex.
+       ###.##
+      ###   ##/
+     ##,     ###
+   &##%       ###
+  ###          ###
+ ###            ###
+###   ##############
+```
 
 Talks, I attended:
 
@@ -161,11 +175,30 @@ workshops about open source software.
 
 In a medium sized space, the second stage was taking place without a big
 scene only a projector and a microphone like a standard tech meetup.
-The talks were great, I did not keep the list of the talk I attended but
-it was really pleasant to have this dimension of presentation.
+The talks were great, it was really pleasant to have this dimension of presentation.
 My favourite talk so far, was from Jonas Nick, cryptographer at
-Blockstream, who explained in a very clear way how Schnorr signature and
-Taproot will be used for the later improvements.
+Blockstream, who explained in a very clear way Schnorr signature
+properties.
+
+I attended (but forgot the schedule):
+
+- Lightning Network in Paralelna Polis - Martin Habovstiak
+- Lightning and Journalism - Janine Romer
+- Trampoline Routing - Bastien Teinturier
+- Deploying Rust-Lightning in the Wild - Antoine Riard
+- Payment Pathfinding for Reliability - Joost Jager
+- Hight Throughput Cryptocurrency Routing in Payment Channel Networks - Vibhaalakshmi Sivaraman
+- 10 Things You Probably Didn‘t Know About Lightning Channels - Oliver Gugger
+- Current Approaches for Pathfinding of Payments on the Lightning Network - Rene Pickhardt
+- The Impact of Schnorr, Taproot, and Tapscipt on Lightning - Michael Folkson
+- Shrunken Schnorr Shortcuts - Jonas Nick
+
+ZmnSCPxj made a talk presenting a huge amount of routing ideas for the
+Lightning Network, I forgot the title of the talk but it was hilarious
+to see her/him struggle to reach the end of her/him slides.
+This individual, who is maybe the most active and prolific writer of the lightning-dev mailing list
+care about privacy. I am happy that Square Crypto gifted ZmnSCPxj a
+[grant](https://twitter.com/sqcrypto/status/1204815615678177280).
 
 I managed to have a picture with Olaoluwa Osuntokun who was patient
 enough to accept it even if he did not know me. The fan boy in me was
@@ -173,7 +206,7 @@ ecstactic.
 
 Someone in the french group had a contact with a member of the c-base
 hackerspace and we were invited to visit it.
- 
+
 # c-base, a Raumstation unter Berlin
 
 ```
@@ -206,7 +239,7 @@ screens and lava lamps.
 
 I gifted my best Bitcoin sticker to our guide who in return gave us
 stickers with the Raumstation logo.
- 
+
 # Unstack sats
 
 I have unstacked a lot of sats playing with the funny
