--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -118,15 +118,11 @@ a last drink, but tired by this long day I was happy to go to bed.
 Location: KÖPENICKER STR. 16 - 17 10997 Berlin
 
 ```
-         ##           Cafe was served by the people of the Paralelni Polis truck
-        ####          and sponsored by Bitmex.
-       ###.##
-      ###   ##/
-     ##,     ###
-   &##%       ###
-  ###          ###
- ###            ###
-###   ##############
+    ##     Cafe was served in front of the conference building
+   ####    by the people of the Paralelni Polis truck and sponsored by Bitmex.
+  ##  ##
+ ##    ##  Inside the truck, was a art gallery about the concept of
+##  ###### Cryptoanarchy and the unregulated internet.
 ```
 
 Talks, I attended:
