--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -4,7 +4,7 @@ date = "2019-10-21"
 topics = ["bitcoin"]
 draft = true
 +++
-```pink
+```ascii-art-pink
                ________
        z$$$$P /_  __/ /_  ___                     Berlin 2019
       d$$$$"   / / / __ \/ _ \
@@ -84,7 +84,7 @@ French people group, we decided to try the famous Room77 pub.
 
 Location: [Room77](http://www.room77.de/) - Graefestraße 77, Berlin
 
-```pink
+```ascii-art-pink
  ──▄▄█▀▀▀▀▀█▄▄─  Room77 is one of the first place in the world wich
 ▄█▀──▄─▄────▀█▄  accepted cryptocurrency payments.
 █───▀█▀▀▀▀▄───█
@@ -117,10 +117,10 @@ a last drink, but tired by this long day I was happy to go to bed.
 
 Location: KÖPENICKER STR. 16 - 17 10997 Berlin
 
-```
+```ascii-art-black
     ##     Cafe was served in front of the conference building
-   ####    by the people of the Paralelni Polis truck and sponsored by Bitmex.
-  ##  ##
+   ####    by the people of the Paralelni Polis truck and sponsored
+  ##  ##   by Bitmex.
  ##    ##  Inside the truck, was a art gallery about the concept of
 ##  ###### Cryptoanarchy and the unregulated internet.
 
@@ -206,16 +206,16 @@ hackerspace and we were invited to visit it.
 
 # c-base, a Raumstation unter Berlin
 
-```
+```ascii-art-black
 
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⡿⠋⠉⣀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣏⠉⠙⠻⣿⣿⣿⣿⠟⠉⢉⡉⠙⠻⣿⣿⣿⣿⠟⠉⢉⣹⣿⣿⣿⣿⣿⣿⠟⠋⢁⣀⠉⠛⢿⣿⣿⣿
-⣿⣿⣿⣿⣿⠄⣰⣿⣿⣿⣿⣿⣿⣿⣿⠿⠿⠿⠿⢿⣿⣿⠄⢸⣿⣿⣿⣷⠄⢹⣿⣿⠃⢠⣾⣿⣿⣷⡀⢹⣿⣿⡇⢀⣾⡿⠻⣿⣿⣿⣿⣿⡏⠄⣾⡿⠻⣿⡆⠈⣿⣿⣿
-⣿⣿⣿⣿⣿⡀⠹⣿⣿⣿⠟⠄⣼⣿⣿⣶⣶⣶⣶⣾⣿⣿⡀⠸⣿⣿⣿⡿⠄⣼⣿⣿⡄⠘⢿⣿⣿⣿⡇⢸⣿⣿⣿⣿⣿⣷⣴⡿⠃⢠⣿⣿⣇⠄⢿⣷⣶⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣷⣤⣀⡉⣁⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⢉⣁⣠⣴⣿⣿⣿⣿⣦⣀⠉⣿⣿⣷⣾⣿⣿⣿⣿⣿⣿⢉⣀⣴⣿⣿⣿⣿⣦⣄⣈⣹⣿⣿⣿⣿⣿⣿
-⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣿⣿⡿⠋⠉⣀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠄⢸⣿⣏⠉⠙⠻⣿⣿⣿⣿⠟⠉⢉⡉⠙⠻⣿⣿⣿⣿⠟⠉⢉⣹⣿⣿⣿⣿⣿⣿⠟⠋⢁⣀⠉⠛⢿⣿⣿
+⣿⣿⣿⠄⣰⣿⣿⣿⣿⣿⣿⣿⣿⠿⠿⠿⠿⢿⣿⣿⠄⢸⣿⣿⣿⣷⠄⢹⣿⣿⠃⢠⣾⣿⣿⣷⡀⢹⣿⣿⡇⢀⣾⡿⠻⣿⣿⣿⣿⣿⡏⠄⣾⡿⠻⣿⡆⠈⣿⣿
+⣿⣿⣿⡀⠹⣿⣿⣿⠟⠄⣼⣿⣿⣶⣶⣶⣶⣾⣿⣿⡀⠸⣿⣿⣿⡿⠄⣼⣿⣿⡄⠘⢿⣿⣿⣿⡇⢸⣿⣿⣿⣿⣿⣷⣴⡿⠃⢠⣿⣿⣇⠄⢿⣷⣶⣿⣿⣿⣿⣿
+⣿⣿⣿⣷⣤⣀⡉⣁⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⢉⣁⣠⣴⣿⣿⣿⣿⣦⣀⠉⣿⣿⣷⣾⣿⣿⣿⣿⣿⣿⢉⣀⣴⣿⣿⣿⣿⣦⣄⣈⣹⣿⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
 ```
 
 [c-base](https://c-base.org) is the oldest crashed space station on earth.
@@ -248,7 +248,7 @@ Spending everyday with my wallet contributed to the overall futuristic
 atmosphere and it was a great reminder everyday that the technology
 , people were actually talking is real, it exists and it grows.
 
-```
+```ascii-art-black
 ⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⣤⣶⣶⣶⣶⣶⠶⣶⠶⣶⡶⠶⠶⠶⠶⠶⠶⢦⡀⠄⠄⠄⠄⠄⠄⠄⠄⠄|---------------|-----|
 ⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡿⠈⠂⠉⠄⠄⠄⠄⠈⠄⠉⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄| amount        | fee |
 ⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⢸⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⡇⠄⠄⠄⠄⠄⠄⠄⠄⠄|---------------|-----|
