--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -40,6 +40,17 @@ technical, more futuristic with really original, passionated and
 passionating people. I cannot go into the details, but I wanted to give
 my overall experience.
 
+The [Lightning Network](http://lightning.network/) is a layer on top
+of Bitcoin enabling fast transaction with more privacy features.
+Powered by bidirectional payment channels and smart contracts,
+this is one of the most exciting solution for Bitcoin scalability.
+One year after the first mainnet channels opened, more than three implementations
+of the [BOLT specifications](https://github.com/lightningnetwork/lightning-rfc) exist.
+
+
+This is the first international event focused on this technology,
+and I wanted to be here, to feel the vibe :)
+
 # Day 0 - The Meetup dev
 
 Location: [AHOY](https://www.ahoyberlin.com/)
