blog: tlc2019 conclusion

--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -45,10 +45,11 @@ of Bitcoin enabling fast transaction with more privacy features.
 Powered by bidirectional payment channels and smart contracts,
 this is one of the most exciting solution for Bitcoin scalability.
 One year after the first mainnet channels opened, more than three implementations
-of the [BOLT specifications](https://github.com/lightningnetwork/lightning-rfc) exist.
-
-
-This is the first international event focused on this technology,
+of the [BOLT specifications](https://github.com/lightningnetwork/lightning-rfc)
+exist, a community of developers and hackers is forming and the size of
+the network is still growing.
+[The Lightning Conference](https://www.thelightningconference.com/)
+is the first international event focused on this technology,
 and I wanted to be here, to feel the vibe :)
 
 # Day 0 - The Meetup dev
@@ -287,5 +288,25 @@ atmosphere and it was a great reminder everyday that the technology
 
 At the current price: 83,37 euros
 
-Shout out to the organizers, it was awesome.
+# Conclusion
+
+After this conference, I had some weird feelings like a Post conference
+Blues, which I would describe as watching a Train passing in front of me or a ship
+leaving me alone on the quay. Full of smart and funny people, the
+vehicle was heading to great adventures and discoveries.
+Fortunately there are plenty ways to contribute to the Lightning
+Development without working on Bitcoin for a living.
+
+[Rusty Russell](https://en.wikipedia.org/wiki/Rusty_Russell) said
+["This event reminds me of the early Linux days."][1]
+It definitely makes me realize of my privilege to attend the conference.
+
+I am grateful for meeting this joyful and building community, witnessing
+its growth and inventivity. I am amazed by the elegant solutions from
+the developers to complex problems. I am overwhelmed by their new ideas and
+engineering concepts I would never be able to imagine.
+
+Thank you to the organizers, it was awesome.
+
+[1]: https://bitcoinmagazine.com/articles/scam-or-iteration-in-berlin-bitcoin-diehards-still-believe-in-lightning
 
