--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -37,13 +37,13 @@ I feel like Alice waking up after her rabbit hole dream.
 
 During three days, I was completely in a different world, more
 technical, more futuristic with really original, passionated and
-passionating people. I cannot go into the details, but I wanted to give
+passionating people. I cannot go further into the details, but I wanted to give
 my overall experience.
 
 The [Lightning Network](http://lightning.network/) is a layer on top
 of Bitcoin enabling fast transaction with more privacy features.
 Powered by bidirectional payment channels and smart contracts,
-this is one of the most exciting solution for Bitcoin scalability.
+this is one of the most exciting solutions for Bitcoin scalability.
 One year after the first mainnet channels opened, more than three implementations
 of the [BOLT specifications](https://github.com/lightningnetwork/lightning-rfc)
 exist, a community of developers and hackers is forming and the size of
@@ -58,14 +58,14 @@ Location: [AHOY](https://www.ahoyberlin.com/)
 
 My plane landed the morning, at 9:00, and I went directly to the meetup.
 The space was quite big but quickly crowded by nerds like me.
-Dark clothes for the most, a Club Mate in one hand, the other with a
+Wearing Dark clothes for the most of them, a Club Mate in one hand, the other with a
 computer and asking the wifi code and a power plug.
 
 As described in the invitation email, it was an open meetup without
-any prior agenda, focused on technical questions around the
+any prior agenda, focused on technical questions about the
 Lightning Network. We had tables to sit down and work on,
 as well as a small area for impromptu talks, announcements or demos.
-It was completely self-organized.
+All of it was completely self-organised.
 
 I attended the rust-lightning workshop organised by ariard.
 The exercise consisted of cloning a bootstrapping
@@ -77,7 +77,7 @@ the bar. It was difficult to discuss in this area because of the
 noise, but it remained very instructive.
 
 My check-in to the hotel was at 6:00pm. I left the space, took the
-subway and got out at the nearest station. I could have taken the bus, but I
+subway and got out at the nearest station. I then could have taken the bus, but I
 wanted to explore Berlin's streets. Walking along a wall, thinking
 of the Lightning, the exciting future to come, I noticed after several
 hundred meters how long this wall actually was and the size of its paintings.
@@ -88,8 +88,8 @@ The contemporary concrete and its cold appearance felt actual. \\
 A rigid line separating families and friends felt actual.
 
 The rain did not spoil the after-party, which was organised in
-a nice pub [Hirsch & Hase](https://hirschundhase.de/), near the station
-Voltastraße. Free Beer and free food ! But after hanging out with the
+a nice pub [Hirsch & Hase](https://hirschundhase.de/), near Voltastraße
+station. Free Beer and free food ! But after hanging out with the
 French people group, we decided to try the famous Room77 pub.
 
 # Room 77 and the 600,000th block
@@ -97,11 +97,11 @@ French people group, we decided to try the famous Room77 pub.
 Location: [Room77](http://www.room77.de/) - Graefestraße 77, Berlin
 
 ```ascii-art-pink
- ──▄▄█▀▀▀▀▀█▄▄─  Room77 is one of the first place in the world wich
+ ──▄▄█▀▀▀▀▀█▄▄─  Room77 is one of the first place in the world which
 ▄█▀──▄─▄────▀█▄  accepted cryptocurrency payments.
 █───▀█▀▀▀▀▄───█
-█────█▄▄▄▄▀───█  A big Bitcoin sign in neon welcome you as you enter in
-█────█────█───█  a warm room with a cypherpunk ambiance. Price is good
+█────█▄▄▄▄▀───█  A big Bitcoin sign in neon welcomes you as you enter in
+█────█────█───█  a warm room with a cypherpunk ambiance. Price is decent
 ▀█▄─▀▀█▀█▀──▄█▀  and service great.
 ──▀▀█▄▄▄▄▄█▀▀──
 ```
@@ -113,9 +113,9 @@ easy, a small machine displaying the qr-code was passed around by the staff
 who seemed totally used to handle this kind of transaction.
 
 Coincidence or not it was the same night that the peer-to-peer
-distributed timestamp server of the Bitcoin protocole would generate its
+distributed timestamp server of the Bitcoin protocol would generate its
 600 000th block, generating a computational proof of a chronological
-order of transaction for thousand of peers of its network and anchoring
+order of transaction for thousands of peers of its network and anchoring
 in time the issuance of 12.5 bitcoins inside the existing 18 millions.
 We waited for it, drinking beers and discussing about mostly informatics
 and community, refreshing some time a bright web page on our phone in
@@ -154,29 +154,29 @@ Talks, I attended:
 
 
 Jack Mallers was really impressive, the talk was not really technical
-but it was a great explanation about financial tools.
+but it remained a great explanation about financial tools.
 
-Olaoluwa Osuntokun talks fast, it is a meme in the community, but
-believe me or not even for a non english speaker like me all is
-intelligible , and the quantity of relevant information, deep in detail
+Olaoluwa Osuntokun talks fast, this fact is a meme in the community, but
+believe me or not even for a non-English speaker like me all is
+intelligible , and the quantity of relevant information, or deep in detail
 explanation of technical solution of complex problem is outstanding.
 
 This first day, the main stage was very focused on technical part. It
-was really refreshing to listen to passionated people with a clear
+was really refreshing to listen to passionate people with a clear
 vision and even if all the audience and speakers have certainly a big
 bias when it is about the Lightning Network, the general spirit was:
-Congrats, the thing works, now we have a lot improvement to do.
+Congrats, the thing works, now we still have a lot improvement to do.
 
 Sadly, I could not enter in the sponsored party, not enough place was
-reserved for the conference attended. The french group and I ended
+reserved for the conference attended. The French group and I ended
 again in Room77.
 
 # Day 2 --
 
 I spent more time on the second floor, playing with the hardware that
-people brought to the conference. There was a lot of funny machines,
+people brought to the conference. There were a lot of funny machines,
 like a cocktail dispenser, beer taps, a polaroid camera, a blowing
-bubble robot, all connected to the lightning network, accepting sats as
+bubble robot, all connected to the Lightning Network, accepting sats as
 a price for the entertainment. Several companies exposed their products
 like home hosting Bitcoin node hardware or cold storage solutions.
 Around a big table with a screen at the end it, people were organizing
@@ -185,7 +185,7 @@ workshops about open source software.
 In a medium sized space, the second stage was taking place without a big
 scene only a projector and a microphone like a standard tech meetup.
 The talks were great, it was really pleasant to have this dimension of presentation.
-My favourite talk so far, was from Jonas Nick, cryptographer at
+My favorite talk so far, was from Jonas Nick, cryptographer at
 Blockstream, who explained in a very clear way Schnorr signature
 properties.
 
@@ -209,11 +209,11 @@ This individual, who is maybe the most active and prolific writer of the lightni
 care about privacy. I am happy that Square Crypto gifted ZmnSCPxj a
 [grant](https://twitter.com/sqcrypto/status/1204815615678177280).
 
-I managed to have a picture with Olaoluwa Osuntokun who was patient
+I managed to take a picture with Olaoluwa Osuntokun who was patient
 enough to accept it even if he did not know me. The fan boy in me was
-ecstactic.
+ecstatic.
 
-Someone in the french group had a contact with a member of the c-base
+Someone in the French group had a contact with a member of the c-base
 hackerspace and we were invited to visit it.
 
 # c-base, a Raumstation unter Berlin
@@ -234,15 +234,15 @@ hackerspace and we were invited to visit it.
 
 After entering through a corridor worthy of being the decors of a remake
 of 2001: a Space Odyssey, we were welcomed inside a big space with
-walls coated with electronic cards, colored neons and LED pannels.
+walls coated with electronic cards, colored neons and LED panels.
 We drank a beer near a pub counter with a futuristic vibe.
 
-Our host guided us in the downstair floor, following the story telling
-of the space he signalled our intrusion to the other spaceships members
+Our host guided us in the downstairs floor, following the story telling
+of the space he signalled our intrusion to the other spaceship's members
 working inside by pressing a weird button. An Alarm rang and panels
-with Space Aliens form drawn on it switch on. The first floor was
-impressive, but this ground was at another level. Even the ceiling had
-wired, dells and buttons. We visited a Library,
+with Space Aliens form drawn on it switch on. The first floor seemed
+already impressive, but this ground was at another level. Even the ceiling
+was covered with wired, dells and buttons. We visited a Library,
 a room with a big mess of tools, soldering irons, space with computer
 screens and lava lamps.
 
@@ -257,7 +257,7 @@ beer. The speed of transaction was swift and fees were cheap,
 Although my Eclair Wallet had only two channels.
 
 Spending everyday with my wallet contributed to the overall futuristic
-atmosphere and it was a great reminder everyday that the technology
+atmosphere and it was a great reminder every day that the technology
 , people were actually talking is real, it exists and it grows.
 
 ```ascii-art-black
@@ -290,8 +290,8 @@ At the current price: 83,37 euros
 
 # Conclusion
 
-After this conference, I had some weird feelings like a Post conference
-Blues, which I would describe as watching a Train passing in front of me or a ship
+After this conference, I had some weird feelings like a post conference
+blues, which I would describe as watching a Train passing in front of me or a ship
 leaving me alone on the quay. Full of smart and funny people, the
 vehicle was heading to great adventures and discoveries.
 Fortunately there are plenty ways to contribute to the Lightning
@@ -302,9 +302,9 @@ Development without working on Bitcoin for a living.
 It definitely makes me realize of my privilege to attend the conference.
 
 I am grateful for meeting this joyful and building community, witnessing
-its growth and inventivity. I am amazed by the elegant solutions from
-the developers to complex problems. I am overwhelmed by their new ideas and
-engineering concepts I would never be able to imagine.
+its growth and inventiveness. I am amazed by the elegant solutions
+the developers comes up with to complex problems. I am overwhelmed by
+their new ideas and engineering concepts I would never be able to imagine.
 
 Thank you to the organizers, it was awesome.
 
