--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -58,8 +58,8 @@ Location: [AHOY](https://www.ahoyberlin.com/)
 
 My plane landed the morning, at 9:00, and I went directly to the meetup.
 The space was quite big but quickly crowded by nerds like me.
-Wearing Dark clothes for the most of them, a Club Mate in one hand, the other with a
-computer and asking the wifi code and a power plug.
+Wearing Dark clothes for the most of them, a Club Mate in one hand,
+the other with a computer and asking the wifi code and a power plug.
 
 As described in the invitation email, it was an open meetup without
 any prior agenda, focused on technical questions about the
@@ -77,8 +77,8 @@ the bar. It was difficult to discuss in this area because of the
 noise, but it remained very instructive.
 
 My check-in to the hotel was at 6:00pm. I left the space, took the
-subway and got out at the nearest station. I then could have taken the bus, but I
-wanted to explore Berlin's streets. Walking along a wall, thinking
+subway and got out at the nearest station. I then could have taken the bus,
+but I wanted to explore Berlin's streets. Walking along a wall, thinking
 of the Lightning, the exciting future to come, I noticed after several
 hundred meters how long this wall actually was and the size of its paintings.
 
@@ -205,8 +205,9 @@ I attended (but forgot the schedule):
 ZmnSCPxj made a talk presenting a huge amount of routing ideas for the
 Lightning Network, I forgot the title of the talk but it was hilarious
 to see her/him struggle to reach the end of her/him slides.
-This individual, who is maybe the most active and prolific writer of the lightning-dev mailing list
-care about privacy. I am happy that Square Crypto gifted ZmnSCPxj a
+This individual, who is maybe the most active and prolific writer
+of the lightning-dev mailing list care about privacy.
+I am happy that Square Crypto gifted ZmnSCPxj a
 [grant](https://twitter.com/sqcrypto/status/1204815615678177280).
 
 I managed to take a picture with Olaoluwa Osuntokun who was patient
