--- a/content/blog/tlc2019.md
+++ b/content/blog/tlc2019.md
@@ -2,7 +2,7 @@
 title = "The Lightning Conference 2019"
 date = "2019-10-21"
 topics = ["bitcoin"]
-draft = true
+draft = false
 +++
 ```ascii-art-pink
                ________
