blog: seperate drafts

--- a/content/blog/2019-10-21-tlc2019.md
+++ b/content/blog/2019-10-21-tlc2019.md
@@ -3,6 +3,7 @@ title = "The Lightning Conference 2019"
 date = "2019-10-21"
 topics = ["bitcoin"]
 draft = false
+slug = "tlc2019"
 +++
 ```ascii-art-pink
                ________
@@ -21,10 +22,10 @@ draft = false
 
 ```
 
-tl;dr:\\
-Talks were outstanding. \\
-Awesome community centered about building stuff.\\
-Spent only sats during three days.\\
+tl;dr:\
+Talks were outstanding. \
+Awesome community centered about building stuff. \
+Spent only sats during three days. \
 Visited nice places and met original people.
 
 ---
@@ -82,9 +83,9 @@ but I wanted to explore Berlin's streets. Walking along a wall, thinking
 of the Lightning, the exciting future to come, I noticed after several
 hundred meters how long this wall actually was and the size of its paintings.
 
-On a little sign, near the ground, was written: **Berliner Mauer**. \\
-One month before its 30th anniversary, this wall did not catch my eyes. \\
-The contemporary concrete and its cold appearance felt actual. \\
+On a little sign, near the ground, was written: **Berliner Mauer**. \
+One month before its 30th anniversary, this wall did not catch my eyes. \
+The contemporary concrete and its cold appearance felt actual. \
 A rigid line separating families and friends felt actual.
 
 The rain did not spoil the after-party, which was organised in
