--- a/content/blog/drafts/2010-07-07-vol-solo.fr.md
+++ b/content/blog/drafts/2010-07-07-vol-solo.fr.md
@@ -2,6 +2,7 @@
 title = "Vol solo du 07/07/2010"
 date = "2010-07-07"
 draft = true
+slug = "vol-solo-2010-07-07"
 +++
 
 Un début désespérant : Je loupe mes trois tours de piste avec mon
