specify output formats in page

--- a/content/blog/2019-10-21-tlc2019.md
+++ b/content/blog/2019-10-21-tlc2019.md
@@ -4,6 +4,7 @@ date = "2019-10-21"
 topics = ["bitcoin"]
 draft = false
 slug = "tlc2019"
+outputs = ["HTML", "txt"]
 +++
 ```ascii-art-pink
                ________
